--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "traefik.backend=ldapadmin"
       - "traefik.frontend.rule=Host:ldapadmin.soc.imerir"
       - "traefik.port=80"
-      - "traefik.docker.network=traefik_default"
+      - "traefik.docker.network=soctraefik_default"
     networks:
       default:
       proxy:
@@ -39,4 +39,4 @@ networks:
         - subnet: 10.255.1.16/28
   proxy:
     external:
-      name: traefik_default
+      name: soctraefik_default
